<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Fajar Adi Setyawan on 13/1/2023 - 10:17:38
  ~ fajaras465@gmail.com
  ~ Copyright (c) 2023.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_display_group_title">

        <ListPreference
            app:defaultValue="@string/pref_theme_entry_auto"
            app:entries="@array/pref_themes_label"
            app:entryValues="@array/pref_themes_entry"
            app:icon="@drawable/ic_themes"
            app:key="@string/pref_key_theme"
            app:title="@string/pref_theme_title"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_key_lang"
            app:icon="@drawable/ic_language"
            app:summary="@string/english"
            app:title="@string/pref_lang_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/pref_display_group_title_application">

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_key_about"
            app:icon="@drawable/ic_baseline_info_24"
            app:summary="@string/pref_about_summary"
            app:title="@string/pref_about_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_key_feedback"
            app:icon="@drawable/ic_baseline_feedback"
            app:summary="@string/pref_feedback_summary"
            app:title="@string/pref_feedback_title" />

        <Preference
            app:iconSpaceReserved="false"
            app:key="@string/pref_key_share"
            app:icon="@drawable/ic_baseline_share"
            app:summary="@string/pref_share_summary"
            app:title="@string/pref_share_title" />

    </PreferenceCategory>

</PreferenceScreen>