<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Fajar Adi Setyawan on 16/1/2023 - 11:59:40
  ~ fajaras465@gmail.com
  ~ Copyright (c) 2023.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_layout"
    tools:context=".feature.ui.detail.tvshow.episode.tab.EpisodeGuestFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_guest_star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_guest_star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/include_loading_all_cast_crew" />
            <include layout="@layout/include_loading_all_cast_crew" />
            <include layout="@layout/include_loading_all_cast_crew" />
            <include layout="@layout/include_loading_all_cast_crew" />
            <include layout="@layout/include_loading_all_cast_crew" />
            <include layout="@layout/include_loading_all_cast_crew" />
            <include layout="@layout/include_loading_all_cast_crew" />
            <include layout="@layout/include_loading_all_cast_crew" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <TextView
        android:id="@+id/tv_guest_star_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_for_guest_empty"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/worksans"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/failed_load_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_failed_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_failed_to_load"
            android:layout_gravity="center"
            android:visibility="gone"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="16sp"
            tools:visibility="visible" />


        <Button
            android:id="@+id/btn_try_again_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/try_again"
            android:layout_marginTop="10dp"
            android:visibility="visible"
            tools:visibility="visible" />
    </LinearLayout>

</FrameLayout>