<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Fajar Adi Setyawan on 8/12/2022 - 11:52:38
  ~ fajaras465@gmail.com
  ~ Copyright (c) 2022.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="none"
    android:scrollbarSize="0dp"
    android:background="@color/bg_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_layout">

        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
            android:id="@+id/progress_circular"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:baselineAlignBottom="false"
            app:direction="clockwise"
            app:dotColor="?colorPrimary"
            app:dotWidth="14dp"
            app:drawDot="true"
            app:enableProgressAnimation="true"
            app:fillBackground="true"
            app:formattingPattern="@string/pattern"
            app:layout_anchorGravity="start|bottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_ori"
            app:progressBackgroundColor="@color/text_color_flip"
            app:progressCap="round"
            app:progressColor="?colorPrimary"
            app:startAngle="270"
            app:textColor="@color/text_color"
            app:textSize="13sp" />

        <TextView
            android:id="@+id/tv_user_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/user_score"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/progress_circular"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_ori" />

        <TextView
            android:id="@+id/tv_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/airing_today"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/progress_circular"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_score" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/worksans"
            android:text="@string/release_date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote" />

        <TextView
            android:id="@+id/tv_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/worksans"
            android:text="@string/time"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote" />

        <LinearLayout
            android:id="@+id/layout_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_runtime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    tools:ignore="Suspicious0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans"
                        android:text="@string/directed_by"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_directed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/quicksand_bold"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/worksans"
                        android:text="@string/written_by"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/tv_written"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/quicksand_bold"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="Season Regulars"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_status" />


        <RelativeLayout
            android:id="@+id/layout_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_regular"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-7dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-7dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include layout="@layout/include_loading_cast" />
                    <include layout="@layout/include_loading_cast" />
                    <include layout="@layout/include_loading_cast" />
                    <include layout="@layout/include_loading_cast" />
                    <include layout="@layout/include_loading_cast" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                android:id="@+id/tv_regular_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_for_cast_empty"
                android:textAlignment="center"
                android:gravity="center"
                android:fontFamily="@font/worksans"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_guest_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/guest_stars"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_regular" />

        <RelativeLayout
            android:id="@+id/layout_guest_star"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_guest_star"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_guest_star"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-7dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_guest_star"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-7dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include layout="@layout/include_loading_cast" />
                    <include layout="@layout/include_loading_cast" />
                    <include layout="@layout/include_loading_cast" />
                    <include layout="@layout/include_loading_cast" />
                    <include layout="@layout/include_loading_cast" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                android:id="@+id/tv_guest_star_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_for_guest_empty"
                android:textAlignment="center"
                android:gravity="center"
                android:fontFamily="@font/worksans"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_crew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="Crew"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_guest_star" />


        <RelativeLayout
            android:id="@+id/layout_crew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_crew"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_crew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-7dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_crew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-7dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                android:visibility="gone">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <include layout="@layout/include_loading_cast" />
                    <include layout="@layout/include_loading_cast" />
                    <include layout="@layout/include_loading_cast" />
                    <include layout="@layout/include_loading_cast" />
                    <include layout="@layout/include_loading_cast" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <TextView
                android:id="@+id/tv_crew_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_for_crew_empty"
                android:textAlignment="center"
                android:gravity="center"
                android:fontFamily="@font/worksans"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>